{
    "name": "Player",
    "maps": [
        {
            "name": "Game",
            "id": "21e2b300-3f30-4fdf-9b4a-461117d5be01",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "55734c89-c438-40d1-91c1-7e9f9336c699",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Value",
                    "id": "27ee0807-0700-4ea4-9c7a-ab9c3c17f94d",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "ec5a426d-1ce0-463b-bddf-4b44f582734b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "2c25bc6a-069e-4e8a-b72d-546c63bcebc8",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "63c202a4-340b-4344-8c6c-c055d6e4339b",
                    "path": "<Keyboard>/#(W)",
                    "interactions": "",
                    "processors": "",
                    "groups": "Standart",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e9083ad3-c33b-47fa-aa39-8bc21a73f232",
                    "path": "<Keyboard>/#(S)",
                    "interactions": "",
                    "processors": "",
                    "groups": "Standart",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "9ce05905-9ed4-4195-9419-88aaf002c8c6",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "Standart",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c3d0b8f5-ee48-4bc5-85e1-e10a04f0ba22",
                    "path": "<Keyboard>/#(D)",
                    "interactions": "",
                    "processors": "",
                    "groups": "Standart",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d9d0bdf1-676f-4ac3-85c0-051770d490cf",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Standart",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f545bbe2-e080-420a-b90e-962b97e947c8",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "Standart",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "401e1df1-1244-4007-ab02-6bbf6be8d033",
            "actions": [
                {
                    "name": "ToggleBattleMode",
                    "type": "Button",
                    "id": "7c85629a-5500-4b91-93a9-771cabde384a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "21e67340-46af-4e29-8fa1-cbb2bfe09299",
                    "path": "<Keyboard>/#(B)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleBattleMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameUI",
            "id": "70eb4d64-1a8f-4e15-bfa0-37cae49ca07c",
            "actions": [
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "68e247f9-1b97-4343-91cb-d00910143a19",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e3a6dc1a-c15e-473e-a715-3af4d7adb625",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Standart",
            "bindingGroup": "Standart",
            "devices": []
        }
    ]
}